// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CharizardComponent  1`] = `
<div
  id="root2"
>
  <h1>
    Pokémon
  </h1>
  <div>
    <h2>
      Loading ...
    </h2>
  </div>
  
  
</div>
`;

exports[`CharizardComponent Debe mostrar Loading al carf 1`] = `
<div
  id="root2"
>
  <h1>
    Pokémon
  </h1>
  <div>
    <h2>
      Loading ...
    </h2>
  </div>
  
  
</div>
`;

exports[`CharizardComponent Debe mostrar Loading al carg 1`] = `
<div
  id="root2"
>
  <h1>
    Pokémon
  </h1>
  <div>
    <h2>
      Loading ...
    </h2>
  </div>
  
  
</div>
`;

exports[`CharizardComponent Debe mostrar Loading al cargar la  1`] = `
<div
  id="root2"
>
  <h1>
    Pokémon
  </h1>
  <div>
    <h2>
      Loading ...
    </h2>
  </div>
  
  
</div>
`;

exports[`CharizardComponent Debe mostrar Loading al cargar la cista 1`] = `
<div
  id="root2"
>
  <h1>
    Pokémon
  </h1>
  <div>
    <h2>
      Loading ...
    </h2>
  </div>
  
  
</div>
`;

exports[`CharizardComponent Debe mostrar Loading al cargar la vista 1`] = `
<div
  id="root2"
>
  <h1>
    Pokémon
  </h1>
  <div>
    <h2>
      Loading ...
    </h2>
  </div>
  
  
</div>
`;

exports[`CharizardComponent debe hacer match con el snapshot 1`] = `
<div
  id="root1"
>
  <h1>
    Pokémon
  </h1>
  <div>
    <h2>
      Loading ...
    </h2>
  </div>
  
  
</div>
`;

exports[`CharizardComponent debe hacer match con el snapshot 2`] = `
<div
  id="root2"
>
  <h1>
    Pokémon
  </h1>
  <div>
    <h2>
      Loading ...
    </h2>
  </div>
  
  
</div>
`;
